# mpckit

./: .dockerignore  .env.example  .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md  biome.json  docker-compose.yml  lefthook.yml  package.json  release-please-config.json  tsconfig.base.json  tsconfig.json  turbo.json
.cargo/: audit.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  deploy.yml  e2e.yml  gas-station.yml  release-please.yml  release-sdks.yml
apps/backend/: Dockerfile  drizzle.config.ts  package.json  tsconfig.json
apps/backend/scripts/: bench-detailed.ts  bench-latencies.ts  deploy.ts  e2e-onboard.ts  e2e-sdk-matrix.ts  e2e-sdk.ts  reconcile-unknown-signs.ts  repro-ed25519.ts
apps/backend/src/: api.ts  index.ts  worker.ts
apps/backend/src/config/: env.ts  log.ts  telemetry.ts
apps/backend/src/features/accounts/: routes.ts  service.ts
apps/backend/src/features/auth/: better-auth-routes.ts  better-auth.ts  bootstrap.ts  keys.ts  routes.ts  siws-plugin.ts
apps/backend/src/features/billing/: jobs.ts  routes.ts  service.ts  sweep.ts  verifier.ts
apps/backend/src/features/dwallets/: routes.ts  service.ts
apps/backend/src/features/encryption-keys/: routes.ts  service.ts
apps/backend/src/features/health/: routes.ts
apps/backend/src/features/metrics/: routes.ts
apps/backend/src/http/: elysia.ts
apps/backend/src/shared/: audit.ts  errors.ts
apps/backend/test/: auth.test.ts  billing-verifier.test.ts  curves.test.ts  derive.test.ts  effects.test.ts  errors.test.ts  hot-wallet.test.ts  move-calls.test.ts  price-feed.test.ts  resilience.test.ts  sign-prepare-nek.test.ts  sign-prepare-race.test.ts  smoke.test.ts  tx-executor-gas-station.test.ts
apps/dashboard/: Dockerfile  next.config.mjs  package.json
apps/dashboard/app/: apple-icon.tsx  global.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  twitter-image.tsx
apps/dashboard/app/(app)/: layout.tsx
apps/dashboard/app/sign-in/: page.tsx
apps/dashboard/components/: add-passkey-banner.tsx  mark.tsx  query-provider.tsx  shell.tsx
apps/dashboard/components/dash/: activity-feed.tsx  code-window.tsx  coin-logo.tsx  dwallet-status.tsx  kicker.tsx  metric.tsx  mono.tsx  network-switcher.tsx  page-header.tsx  scope-picker.tsx  shaders.tsx  status-pill.tsx  tile.tsx  wallet-picker.tsx
apps/dashboard/components/ui/: alert.tsx  command.tsx  tabs.tsx
apps/dashboard/lib/: api.ts  auth-client.ts  coins.ts  dwallet-curves.ts  env.ts  format.ts  identity.ts  network.ts  query-keys.ts  scopes.ts  site.ts  toast.ts
apps/docs/: .gitignore  Dockerfile  mdx-components.tsx  middleware.ts  next.config.mjs  package.json  proxy.ts  tsconfig.json
apps/docs/app/: apple-icon.tsx  global.css  icon.tsx  layout.tsx  opengraph-image.tsx  robots.ts  sitemap.ts  twitter-image.tsx
apps/docs/app/(home)/: layout.tsx  page.tsx
apps/docs/app/docs/: layout.tsx
apps/docs/components/: mark.tsx
apps/docs/content/docs/: index.mdx  skills.mdx
apps/docs/lib/: layout-options.tsx  site.ts  source.ts
examples/rust-cli/: Cargo.toml
examples/rust-cli/src/: main.rs
examples/ts-browser/: index.html  package.json
examples/ts-browser/src/: main.ts
examples/ts-node/: package.json
examples/ts-node/src/: index.ts
infra/gas-station/: Dockerfile  entrypoint.sh
infra/k8s/base/: backend.yaml  dashboard.yaml  docs.yaml  gas-station.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  postgres.yaml  redis.yaml
infra/k8s/ci/: README.md  rbac.yaml
infra/k8s/overlays/testnet/: configmap.yaml  kustomization.yaml  secrets.example.yaml
skills/mpckit/: README.md  SKILL.md  metadata.json
skills/mpckit/references/: errors.md  flows.md  react.md  rust.md  typescript.md
(+115 files in other folders)
